8312440: assert(cast != nullptr) failed: must have added a cast to pin the node

Reviewed-by: chagedorn, kvn, thartmann